--- a/aip.tex
+++ b/aip.tex
@@ -35,17 +35,17 @@ TO DO LIST:
    %    \emily[inline]{Done.}
    % \end{itemize}
    %It also appeared in the general discussion of optimization, but I replaced it with $n$, as our optimization problems are in $\RR^n$ and $\ZZ^n$.   
-\item[$\Box$]  Brainstorm list of the desired properties we want from examples, and what section to put them in: 
-\emily[inline]{I'm happy with your examples, Pedro, I don't think we need more.}
-\begin{itemize}
-   \item Examples of algorithms (\eg $\idealm$-primary case, general setting)
-   \pedro[inline]{Done}
-   \item Maybe introduce the $\idealm$-primary and/or homogeneous case earlier, for instance, when we talk about minimal face, universal denominator, etc.
-   \pedro[inline]{Done}
-   % \item Possibly simple picture (2D or 3D) illustrating small and very small after \Cref{geometric small and very small: R}.
-   % \pedro[inline]{I included an example with a picture.}
-   % \emily[inline]{Thank you!}
-\end{itemize}
+% \item[$\CheckedBox$]  Brainstorm list of the desired properties we want from examples, and what section to put them in: 
+% \emily[inline]{I'm happy with your examples, Pedro, I don't think we need more.}
+% \begin{itemize}
+%    \item Examples of algorithms (\eg $\idealm$-primary case, general setting)
+%    \pedro[inline]{Done}
+%    \item Maybe introduce the $\idealm$-primary and/or homogeneous case earlier, for instance, when we talk about minimal face, universal denominator, etc.
+%    \pedro[inline]{Done}
+%    % \item Possibly simple picture (2D or 3D) illustrating small and very small after \Cref{geometric small and very small: R}.
+%    % \pedro[inline]{I included an example with a picture.}
+%    % \emily[inline]{Thank you!}
+% \end{itemize}
 % \item[$\Box$] Put in examples. Remember to label $\canvec_1$, $\canvec_2$, $\canvec_3$ when appropriate. 
 % \pedro[inline]{Started working on it.}
 %\item[$\CheckedBox$] Rewrite statements in terms of ``shortfall.''
@@ -100,11 +100,11 @@ TO DO LIST:
  \item[$\Box$] Put ``titles'' in appropriate statements.
  \pedro[inline]{Done with definitions. We might want to remove some of them later, though (\eg the one for $\epsilon_{p^e}$ and $\delta_{p^e}$).}
  \item[$\Box$]  Describe an analog of \Cref{computing nu for large q: C}:  Explain how our proof demonstrates that $\mu(A,\vv{u},p^e) = \mu(\collapse{A}, \collapse{\vv{u}}, p^e)$ for every $p \gg 0$ and $e \geq 1$.  This follows from the fact that $\sprout_p^{\ast}(A,\vv{u}) = \sprout_p^{\ast}(\collapse{A}, \collapse{\vv{u}})$.
+ \item[$\Box$] Abstract
+ \item[$\Box$] Introduction
  \item[$\Box$] Outline at the end of \Cref{sec: LPs}
  \item[$\Box$] Section on generic hypersurfaces
- \item[$\Box$] Introduction
  \item[$\Box$] Dissolve appendix B
- \item[$\Box$] Abstract
 % \item[$\CheckedBox$] Should we explain what \Cref{main theorem wrt diagonal: T} tells us about the difference between critical exponents and $F$-thresholds?
 % \item[$\CheckedBox$] Should we explain why we have a deterministic algorithm for computing critical exponents, modulo algorithms for solving integer programs, or computing lattice points in polyhedra?
 % \item[$\CheckedBox$]  It seems like if $A$ comes from a positively homogeneous $\idealm$-primary ideal, then most non-leading coefficients vanish, and it should be true that either $\crit(A,\vv{u}) = \ft{A}{\vv{u}}$ or $\crit(A,\vv{u})$ is rational with denominator a power of $p$.  Is this worth pointing out?
@@ -130,23 +130,23 @@ TO DO LIST:
 
 
 
-Let $\kk$ be a field of prime characteristic $p>0$ with $[\kk:\kk^p] < \infty$, 
-%, and consider the polynomial ring $R = \kk[x_1, \ldots, x_\numvars]$.  
-%Given ideals $\ideala$ and $\idealb$ of $R$ with ${\ideala}$ contained in $\sqrt \idealb$, and a nonnegative integer $e$, we define
-take  $\ideala$ and $\idealb$ in a polynomial ring over $\kk$ for which ${\ideala}$ is contained in $\sqrt \idealb$.  For a nonnegative integer $e$, we define
+Let $\kk$ be a field of prime characteristic $p>0$ with $[\kk:\kk^p] < \infty$, and take ideals $\ideala$ and $\idealb$ in a polynomial ring over $\kk$ for which $\ideala$ is contained in $\sqrt \idealb$.
+\pedro{We might want to require these to be nonzero and proper, or else we need special conventions when $\ideala = 0$ or $\idealb = R$.}
+For a nonnegative integer $e$, we define
 %
-\[\nu(\ideala,\idealb,p^e) \coloneqq \max\big\{k\in \NN : \ideala^{k} \not\subseteq \idealb^{[p^e]}\big\}\]
+\[\nu(\ideala,\idealb,p^e) \coloneqq \max\big\{\ell\in \NN : \ideala^{\ell} \not\subseteq \idealb^{[p^e]}\big\}\]
 %
 where $\idealb^{[p^e]} = \langle g^{p^e} : g \in \idealb \rangle$ is the $p^e$-th Frobenius power of $\idealb$.
 The condition that $\ideala \subseteq \sqrt \idealb$ guarantees that each $\nu(\ideala, \idealb, p^e)$ is a well-defined integer.
 
 The \emph{growth rate} of these integers as a function of the nonnegative integer $e$ is of independent interest.
 It is not hard to see that the sequence $\big(\nu(\ideala,\idealb,p^e)/p^e\big)_{e=0}^{\infty}$ is nondecreasing and bounded,  and we define
-\[ \ft{\ideala}{\idealb} = \lim_{e \to \infty} \frac{\nu(\ideala, \idealb, p^e)}{p^e}  = \sup_{e\in \NN} \frac{\nu(\ideala,\idealb,p^e)}{p^e}, \]
+\[
+   \ft{\ideala}{\idealb} \coloneqq \lim_{e \to \infty} \frac{\nu(\ideala, \idealb, p^e)}{p^e}  = \sup_{e\in \NN} \frac{\nu(\ideala,\idealb,p^e)}{p^e}
+\]
 which we call the \emph{$F$-threshold of $\ideala$ with respect to $\idealb$}.
 
 % \daniel{Motivate the $\nu$'s by tying them to roots of BS polynomials; motivate $F$-thresholds by relating them to behavior of test ideals.  Relate them to multiplier ideals}
-
 
 \daniel[inline]{This is essentially copied verbatim from \cite[Problem 3.8]{mustata+takagi+watanabe.F-thresholds}.  It also appeared as \cite[Problem 2.3]{budur+mustata+saito.roots_bs_polys} .  We should probably restate it more precisely, and explain its significance.}
 
@@ -156,31 +156,26 @@ which we call the \emph{$F$-threshold of $\ideala$ with respect to $\idealb$}.
    When could $N$ be chosen independently of $\idealb$ and $e$?
 \end{problem}
 
-
-%
 \daniel[inline]{Emphasize that when $\ideala$ is monomial and $\idealb$ is arbitrary (over $\QQ$), then the $F$-threshold of $\ideala_p$ with respect to $\idealb_p$ is independent of $p$ for all $p \gg 0$.  This is \Cref{nu-mu-reduce-monomial: C}.}
 
-
-
-%
 \begin{theorem}
    \label{general-nu-theorem: T}
-   Given a monomial ideal $\ideala$ of $\QQ[x_1, \ldots, x_\numvars]$, and an arbitrary ideal $\idealb$ of this polynomial ring with $\ideala \subseteq \sqrt{\idealb}$, there exist positive integers $\ell = \ell(\ideala)$ and  $\beta = \beta(\ideala, \idealb)$, and for every integer $1 \leq r < \ell$ relatively prime to $\ell$ a rational number $\delta(\ideala, \idealb, r)$ satisfying the following conditions.
+   Given a monomial ideal $\ideala$ of $\QQ[x_1, \ldots, x_\numvars]$, and an arbitrary ideal $\idealb$ of this polynomial ring with $\ideala \subseteq \sqrt{\idealb}$, there exist positive integers $\ell = \ell(\ideala)$ and  $\beta = \beta(\ideala, \idealb)$, and for every integer $1 \leq r < \ell$ relatively prime to $\ell$, a rational number $\delta(\ideala, \idealb, r)$ satisfying the following condition.
    If $p^e > \beta(\ideala, \idealb)$ and $p^e \equiv r \bmod \ell$, then $ \nu(\ideala_p, \idealb_p, p^e) = \ft{\ideala}{\idealb} \cdot p^e - \delta(\ideala, \idealb, r)$.
 \end{theorem}
 
 As above, let $\kk$ be a field of prime characteristic $p>0$ with $[\kk: \kk^p]$ finite.
 If $\ideala$ is an ideal of $\kk[x_1, \ldots, x_\numvars]$, then the Frobenius powers of $\ideala$ are a family of ideals $\ideala^{[t]}$ indexed by a nonnegative real parameter $t$.
 When the exponent is an integer, then the corresponding Frobenius power can be described concretely in terms of generators as follows:
-If $k$ is a natural number, and $\ideala$ is generated by polynomials $f_1, \ldots, f_n$, then $\ideala^{[k]}$ is the ideal generated by the products $f^{\vv{u}} = f_1^{u_1}\cdots f_n^{u_n}$, ranging over all points $\vv{u} \in \NN^n$ for which the multinomial coefficient $\binom{k}{\vv{u}}$ is nonzero modulo $p$  \cite[Proposition~3.5]{hernandez+etal.frobenius_powers}.
+If $k$ is a natural number, and $\ideala$ is generated by polynomials $f_1, \ldots, f_n$, then $\ideala^{[k]}$ is the ideal generated by the products $f^{\vv{u}} = f_1^{u_1}\cdots f_n^{u_n}$, ranging over all points $\vv{u} \in \NN^n$ for which the multinomial coefficient $\binom{k}{\vv{u}}$ is nonzero modulo~$p$  \cite[Proposition~3.5]{hernandez+etal.frobenius_powers}.
 
 Now, if $\idealb$ is an ideal of $\kk[x_1, \ldots, x_\numvars]$ with $\ideala \subseteq \sqrt{\idealb}$, then in analogy with the above definitions, given a nonnegative integer $e$, we define
-\[\mu(\ideala,\idealb,p^e) \coloneqq \max\big\{k\in \NN : \ideala^{[k]} \not\subseteq \idealb^{[p^e]}\big\}.\]
+\[\mu(\ideala,\idealb,p^e) \coloneqq \max\big\{\ell\in \NN : \ideala^{[\ell]} \not\subseteq \idealb^{[p^e]}\big\}.\]
 Then $\big(\mu(\ideala,\idealb,p^e)/p^e\big)_{e=0}^{\infty}$ is a nondecreasing bounded sequence, and
 \begin{equation}\label{eq: crit as a limit of mus}
-   \crit(\ideala,\idealb) = \lim_{e\to \infty} \frac{\mu(\ideala,\idealb,p^e)}{p^e} = \sup_{e\in \NN} \frac{\mu(\ideala,\idealb,p^e)}{p^e}.
+   \crit(\ideala,\idealb) \coloneqq \lim_{e\to \infty} \frac{\mu(\ideala,\idealb,p^e)}{p^e} = \sup_{e\in \NN} \frac{\mu(\ideala,\idealb,p^e)}{p^e}
 \end{equation}
-is the critical exponent of $\ideala$ with respect to $\idealb$.
+is the \emph{critical exponent of $\ideala$ with respect to $\idealb$}.
 
 \begin{theorem}
    \label{general-mu-theorem: T}
@@ -202,9 +197,6 @@ The standard inner product in $\RR^n$ is denoted by the usual angle brackets: $\
 An inequality between points of $\RR^n$ is a shorthand for a system of $n$ coordinatewise inequalities; \eg $\vv{u}\le \vv{v}$ means that $u_i \le v_i$ for each $i=1,\ldots,n$.
 In the same vein, operations on numbers are extended to points in $\RR^n$ in a coordinatewise fashion; for instance, $\up{\vv{u}}=(\up{u_1},\ldots,\up{u_n})$.
 
-% We say that a point $\vv{u}\in \RR^n$ is positive (respectively, nonnegative) if $\vv{u} > \vv{0}$ (respectively, $\vv{u}\ge \vv{0}$).
-\daniel{Revisit this when deciding how to describe collapsing}
-% More generally,
 We say that a point $\vv{u}$ in a coordinate subspace $\mathcal{S}$ of $\RR^n$ is a \emph{positive} (respectively, \emph{nonnegative}) point of $\mathcal{S}$ if $\vv{u}$ is a positive (respectively, nonnegative) linear combination of the standard basis vectors that span $\mathcal{S}$.
 We extend this to all points in $\RR^n$, via projection: we say that $\vv{u} \in \RR^n$ is \emph{positive in $\mathcal{S}$} (respectively, \emph{nonnegative in $\mathcal{S}$}) if its projection on $\mathcal{S}$ is a positive (respectively, nonnegative) point of $\mathcal{S}$. 
 Finally, given $\vv{u},\vv{v}\in \RR^n$, we say that \emph{$\vv{u}$ is less than} (respectively, \emph{less than or equal to}) \emph{$\vv{v}$ in $\mathcal{S}$} if $\vv{v}-\vv{u}$ is positive (respectively, nonnegative) in $\mathcal{S}$.
@@ -214,7 +206,7 @@ Note that with these conventions, $\vv{u} < \vv{v}$ if and only if $\vv{u}$ is l
 \subsection{Monomial matrices, monomial ideals, and pairs}
 \label{monomial newton preliminaries: ss}
 
-We work in the polynomial ring $\kk[x_1, \ldots, x_\numvars]$ over a field $\kk$, and adopt standard notation for describing monomials.  That is, if $\vv{u} \in \NN^\numvars$, then $x^{\vv{u}} = x_1^{u_1} \cdots x_\numvars^{u_\numvars}$.
+We work in the polynomial ring $\kk[x_1, \ldots, x_\numvars]$ over a field $\kk$, and adopt standard multi-exponent notation for denoting monomials; that is, if $\vv{u} \in \NN^\numvars$, then $x^{\vv{u}} = x_1^{u_1} \cdots x_\numvars^{u_\numvars}$.
 
 \begin{definition}[Monomial matrices]
 \label{monomial matrix: D}
@@ -223,28 +215,31 @@ If $A$ is an $\numvars \times n$ monomial matrix, then we call $\ZZ^n$ the \emph
 \end{definition}
 
 \begin{remark}[Connections with monomial ideals]
-\label{monomial matrix ideal: R}  Consider a proper monomial ideal $\ideala$ of $\kk[x_1, \ldots, x_{\numvars}]$.  Given a generating set $\ideala = \langle x^{\vv{a}_1}, \ldots, x^{\vv{a}_n} \rangle$, not necessarily minimal, with the property that each variable of the ambient polynomial ring appears in some generator, it is not difficult to see that \[A= \begin{bmatrix} \vv{a}_1 & \cdots & \vv{a}_n \end{bmatrix}\] is an  $\numvars \times n$ monomial matrix.  Clearly, as this process depends on the choice of a distinguished generating set for $\ideala$, there are many monomial matrices $A$ we can assign to $\ideala$, though each such matrix will necessarily have $m$ rows.
+   \label{monomial matrix ideal: R}
+   Consider a proper monomial ideal~$\ideala$ of $\kk[x_1, \ldots, x_{\numvars}]$.
+   Given a generating set $x^{\vv{a}_1}, \ldots, x^{\vv{a}_n}$ for $\ideala$, not necessarily minimal, with the property that each variable of the ambient polynomial ring appears in some generator, the matrix
+   \[
+      A= \begin{bmatrix} \vv{a}_1 & \cdots & \vv{a}_n \end{bmatrix}
+   \]
+   is an  $\numvars \times n$ monomial matrix.
+   Clearly, as this process depends on the choice of a distinguished generating set for the ideal $\ideala$, there are many monomial matrices $A$ we can assign to $\ideala$, though each such matrix will necessarily have $m$ rows.
 \end{remark}
 
-\begin{remark}[Generators in terms of monomial matrices]
-   \label{generators-via-exponent-matrix: R}  If $\ideala$ is a proper monomial ideal, and $A= \begin{bmatrix} \vv{a}_1 & \cdots & \vv{a}_n \end{bmatrix}$ is a monomial matrix associated to $\ideala$, then the generators of powers of $\ideala$ can be described compactly in terms of the matrix $A$.
+\begin{remark}[Generators of powers in terms of monomial matrices]
+   \label{generators-via-exponent-matrix: R}
+   If $\ideala$ is a proper monomial ideal, and $A= \begin{bmatrix} \vv{a}_1 & \cdots & \vv{a}_n \end{bmatrix}$ is a monomial matrix associated to $\ideala$, then the generators of powers of $\ideala$ can be described compactly in terms of the matrix $A$.
    Indeed, this follows from the fact that the product $(x^{\vv{a}_1})^{k_1} \cdots (x^{\vv{a}_n})^{k_n}$ can be written as $x^{A \vv{k}} = x^{k_1 \vv{a}_1 + \cdots + k_n \vv{a}_n}$.
-   That is, $\ideala^\ell$ is generated by all monomials of the form $x^{A \vv{k}}$ with $\vv{k} \in \NN^n$ satisfying $\norm{\vv{k}} = \ell$.
-%
-% \begin{equation}
-% \label{generators-via-exponent-matrix: e}
-% \ideala^n = \langle x^{A \vv{k}} : \vv{k} \in \NN^n \text{ and } \norm{\vv{k}}=n \rangle.
-% \end{equation}
+   Thus, $\ideala^\ell$ is generated by all monomials of the form $x^{A \vv{k}}$ with $\vv{k} \in \NN^n$ satisfying $\norm{\vv{k}} = \ell$.
 \end{remark}
 
-
-
-\begin{definition}[Diagonal ideals]  A  \emph{diagonal ideal} of $\kk[x_1, \ldots, x_{\numvars}]$ is any \emph{proper} ideal of the form $\ideald = \langle x_1^{u_1}, \ldots, x_{\numvars}^{u_{\numvars}} \rangle$.  In this case,  we call $\ideald$ the diagonal ideal associated to the \emph{positive} point $\vv{u} = (u_1, \ldots, u_{\numvars}) \in \ZZ^{\numvars}$.
+\begin{definition}[Diagonal ideals]
+   A  \emph{diagonal ideal} of $\kk[x_1, \ldots, x_{\numvars}]$ is any \emph{proper} ideal of the form $\ideald = \langle x_1^{u_1}, \ldots, x_{\numvars}^{u_{\numvars}} \rangle$.
+   In this case,  we call $\ideald$ the diagonal ideal associated to the \emph{positive} point $\vv{u} = (u_1, \ldots, u_{\numvars}) \in \ZZ^{\numvars}$.
 \end{definition}
 
 \begin{definition}[Pairs]  
 \label{pairs: D}
-   A \emph{monomial pair} $(A, \vv{u})$ consists of an $\numvars \times n$ monomial matrix $A$, and a positive point $\vv{u} \in \ZZ^\numvars$, the target lattice of $A$.  
+   A \emph{monomial pair} $(A, \vv{u})$ consists of an $\numvars \times n$ monomial matrix $A$, and a positive point $\vv{u}$ of $\ZZ^\numvars$, the target lattice of $A$.  
     An \emph{$A$-pair} is a monomial pair whose first entry is $A$.
    
    An \emph{ideal pair} $(\ideala, \ideald)$ consists of a proper monomial ideal $\ideala$ of $\kk[x_1, \ldots, x_{\numvars}]$, along with a diagonal ideal $\ideald$ of the same ambient polynomial ring.
@@ -266,18 +261,20 @@ Every program $\Omega$ we consider in this article has the property that the val
 \section{Connections with optimization}
 \label{sec: LPs}
   
-Throughout this section, we consider an ideal pair $(\ideala, \ideald)$ in $\kk[x_1, \ldots, x_{\numvars}]$, as described in \Cref{pairs: D}.   Our goal here, and for much of the rest of the article, is to study the integers $\nu(\ideala, \ideald, p^e)$ and $\mu(\ideala, \ideald, p^e)$ and rational numbers $\ft{\ideala}{\ideald}$ and $\crit(\ideala, \ideald)$ defined in the introduction.  As will soon be apparent, it is natural to do so in terms of various optimization problems.
+Throughout this section, we consider an ideal pair $(\ideala, \ideald)$ in $\kk[x_1, \ldots, x_{\numvars}]$, as described in \Cref{pairs: D}.
+Our goal here, and for much of the rest of the article, is to study the integers $\nu(\ideala, \ideald, p^e)$ and $\mu(\ideala, \ideald, p^e)$ and rational numbers $\ft{\ideala}{\ideald}$ and $\crit(\ideala, \ideald)$ defined in the introduction.
+As will soon be apparent, it is natural to do so in terms of various optimization problems.
 
 \begin{remark} \label{reduction to diagonal :R}
-This context might seem restrictive, given that our ultimate goal is to understand the nature of the above mention numerical invariants when the diagonal ideal $\ideald$ is replaced with an arbitrary ideal $\idealb$.  
-
-However, as we explain in \Cref{monomial-reduction: A}, understanding the situation for all ideal pairs $(\ideala, \ideald)$ with $\ideala$ fixed, but $\ideald$ varying, leads to \Cref{general-nu-theorem: T,general-mu-theorem: T}.
+   This context might seem restrictive, given that our ultimate goal is to understand the nature of those numerical invariants when the diagonal ideal $\ideald$ is replaced with an arbitrary ideal $\idealb$.
+   However, as we explain in \Cref{monomial-reduction: A}, understanding the situation for all ideal pairs $(\ideala, \ideald)$ with $\ideala$ fixed, but $\ideald$ varying, leads to \Cref{general-nu-theorem: T,general-mu-theorem: T}.
 \end{remark}
 
-To facilitate the transition from algebra to optimization, fix a monomial pair $(A, \vv{u})$ associated to $(\ideala, \ideald)$, as described in \Cref{associate of pairs: R}.  In particular, $A$ is an $\numvars \times n$ monomial matrix, $\vv{u} \in \ZZ^m$ is a positive lattice point, and 
+To transition from algebra to optimization, fix a monomial pair $(A, \vv{u})$ associated to $(\ideala, \ideald)$, as described in \Cref{associate of pairs: R}.  In particular, $A$ is an $\numvars \times n$ monomial matrix, $\vv{u} \in \ZZ^m$ is a positive lattice point, and 
 \[ \ideald = \langle x^{u_1}, \ldots, x^{u_{\numvars}} \rangle \subseteq \kk[x_1, \ldots, x_{\numvars}] \] is the diagonal ideal associated to $\vv{u}$.
 
-\subsection{Relations with integer and linear programs}  We start by studying the integers $\nu(\ideala, \ideald, p^e)$ and rational numbers $\ft{\ideala}{\ideald}$; as touched on in \Cref{reduction to diagonal :R}, we will later be able to use our results here to obtain more general ones. 
+\subsection{Relations with integer and linear programs}
+We start by studying the integers $\nu(\ideala, \ideald, p^e)$ and rational numbers $\ft{\ideala}{\ideald}$; as touched on in \Cref{reduction to diagonal :R}, we will later be able to use our results in this restrictive context to obtain more general ones. 
 First, recall that for each $q$ a power of $p$, the integer $\nu(\ideala, \ideald, q)$ is defined as 
 \[\nu(\ideala,\ideald,q) = \max\big\{\ell \in \NN : \ideala^{\ell} \not\subseteq \ideald^{[q]}\big\}.\]
 
@@ -289,14 +286,13 @@ This observation motivates the following definition.
    If $q$ is a positive integer, then $\IP(A, \vv{u}, q)$ is the integer program in the domain lattice of $A$ which consists of maximizing the objective function $\vv{k} \mapsto \norm{\vv{k}}$ subject to the constraints $\vv{k} \geq \vv{0}$ and $A \vv{k} \leq \vv{u}q - \vv{1}$.
 \end{definition}
 
-It is easy to deduce from the fact that the matrix $A$ is a monomial matrix (\ie has nonnegative, nonzero rows and columns) that the feasible set of $\IP(A,\vv{u},q)$ is finite, and hence, this integer program has a well-defined value.  In fact, the discussion preceding \Cref{IP: D} demonstrates that 
+It is easy to deduce from the fact that the matrix $A$ is a monomial matrix (\ie has nonnegative, nonzero rows and columns) that the feasible set of $\IP(A,\vv{u},q)$ is finite, and hence this integer program has a well-defined value.
+Moreover, the discussion preceding \Cref{IP: D} demonstrates that 
 %
 \begin{equation}
 \label{nu as program value: eq}
 \nu(\ideala,\ideald,q) = \val \IP(A,\vv{u},q).
 \end{equation}
-
-
 
 We now shift our attention from the integers $\nu(\ideala, \ideald, q)$ to the $F$-threshold $\ft{\ideala}{\ideald}$.  First, note that \eqref{nu as program value: eq} and the definition of $\ft{\ideala}{\ideald}$ imply that 
 %
@@ -313,8 +309,6 @@ Continuing with our theme, we seek to describe this number in terms of a certain
 \end{definition}
 
 Once again, the fact that $A$ is monomial implies that the feasible set of the linear program $\LP(A,\vv{u})$ is bounded, and therefore a polytope in the domain of $A$.  Consequently, $\LP(A,\vv{u})$ has a well-defined value.
-%In order to relate this value to the Newton polyhedron of $A$ we need the following definition.
-
 
 \begin{proposition}
 \label{ft as val LP: P}
@@ -328,17 +322,14 @@ The value of $\LP(A, \vv{u})$ equals the $F$-threshold $\ft{\ideala}{\ideald}$.
    Conversely, given an optimal point $\vv{t} \in \RR^n$ for $\LP$,
    define $\vv{t}_q \in \ZZ^n$ as the point whose $i$-th coordinate is $0$ if $t_i=0$, and otherwise equals $\lceil q t_i \rceil - 1$, the greatest integer less than $q t_i$.
    By design, and the fact that $A$ is a monomial matrix, the $i$-th entry of $A \vv{t}_q$ is either less than the $i$-th entry of $A (q \vv{t})$, which itself is less than or equal to $u_iq$, by the feasibility of $\vv{t}$ for $\LP$, or equals $0$,  in which case it is also less than $u_i q$ since $\vv{u}$ is positive. This observation demonstrates that $\vv{t}_q$ is feasible for $\IP(A, \vv{u}, q)$, and so
-   \[\val \IP(A, \vv{u}, q) \geq \norm{\vv{t}_q} \geq \sum_{i=1}^n \big(\lceil q t_i \rceil - 1\big) \geq q \norm{\vv{t}} -n = q \cdot \val \LP - n.\]
-   
+   \[\val \IP(A, \vv{u}, q) \geq \norm{\vv{t}_q} \geq \sum_{i=1}^n \big(\lceil q t_i \rceil - 1\big) \geq q \norm{\vv{t}} -n = q \cdot \val \LP - n.\]   
    Dividing by $q$ and taking the limit as $q$ tends to infinity, we find that the limits in \eqref{ft as limit of normalized program values: eq} are at least $\val \LP$, which completes the proof.
 \end{proof}
 
-
 \subsection{Relations with arithmetic and fractal programs}
 
- We now turn our attention to the integers $\mu(\ideala, \ideald, p^e)$ and rational numbers $\crit(\ideala,\ideald)$; as mentioned in the our method
-
- First, recall that for each $q$ a power of $p$, the integer $\mu(\ideala, \ideald, q)$ is defined as 
+We now turn our attention to the integers $\mu(\ideala, \ideald, p^e)$ and rational numbers $\crit(\ideala,\ideald)$.
+First, recall that for each $q$ a power of $p$, the integer $\mu(\ideala, \ideald, q)$ is defined as 
 \[\mu(\ideala,\ideald,q) \coloneqq \max\big\{ \ell \in \NN : \ideala^{[\ell]} \not\subseteq \ideald^{[q]}\big\},\]
 where $\ideala^{[\ell]}$ is the $\ell$-th (generalized) Frobenius power of $\ideala$.
 
